--- a/code/未命名1.ipynb
+++ b/code/未命名1.ipynb
@@ -223,6 +223,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.])\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "a = torch.zeros(1)\n",
+    "print(a)\n",
+    "print(a.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -245,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
